--- a/gh-pages-stub/search.html
+++ b/gh-pages-stub/search.html
@@ -15,31 +15,12 @@ no_version_test: true
           </select>
 
           <input type="text" class="form-control" id="search-box" placeholder="Search" name="query">
+          <input type="hidden" name="baseUrl" value="{{ site.baseurl }}/{{ base_docs_path }}">
       </div>
       <button type="submit" class="btn btn-default">Submit</button>
 </form>
 
 <ul id="search-results"></ul>
 
-<script>
-  {% capture database %}
-  window.store = {
-    {% for post in site.pages %}
-        {% assign processed_content = '' %}
-        {% assign content =  post.content | strip_html | jsonify | replace: '\r', '\n' | split: '\n'%}
-        {% for content_chunk in content %}
-             {% capture processed_content %}{{ processed_content }}{{ content_chunk | strip }}{% unless forloop.last %}\n{% endunless %}{% endcapture %}           
-        {% endfor %}
-      "{{ post.url | slugify }}": {
-        "title": "{{ post.title | xml_escape }}",
-        "content": {{ processed_content }},
-        "url": "{{ site.baseurl}}{{ post.url | xml_escape }}",
-        "test": "{{ post.sitemap }}"
-        }{% unless forloop.last %},{% endunless %}
-    {% endfor %}
-  };
-  {% endcapture %}
-  {{ database | strip_newlines | replace: '\n\n\n\n', '\n' | replace: '\n\n\n', '\n' | replace: '\n\n', '\n' | split: ' ' | join: ' ' }}
-</script>
 <script src="{{ site.baseurl }}/public/js/lunr.min.js"></script>
 <script src="{{ site.baseurl }}/public/js/search.js"></script>
